# researcher-dashboard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/src/auspexai_researcher_dashboard/: __init__.py  api.py  cli.py  config.py  coordinator.py  exec_ops.py  local_ops.py  main.py  service.py
backend/src/auspexai_researcher_dashboard/static/: .gitkeep
backend/tests/: test_benchmarks.py  test_exec_ops.py  test_export_save.py  test_export_verification.py  test_health.py  test_local_ops.py  test_proxy_account_bind.py  test_proxy_account_workers.py  test_proxy_onboarding.py  test_proxy_rd2.py  test_proxy_rd3.py  test_proxy_rd4.py  test_proxy_rd5.py  test_proxy_rd6.py  test_proxy_rd7.py  test_service.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  index.ts
frontend/src/lib/components/: ActivityHeart.svelte  ErrorState.svelte  ExperimentSetup.svelte  LifecycleTimeline.svelte  Nav.svelte  StatusBadge.svelte  UpdateBanner.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/benchmarks/: +page.svelte
frontend/src/routes/experiments/: +page.svelte
frontend/src/routes/experiments/[id]/: +page.svelte
frontend/src/routes/onboard/: +page.svelte
frontend/src/routes/receipts/: +page.svelte
frontend/src/routes/reference/: +page.svelte
frontend/src/routes/requests/: +page.svelte
frontend/src/routes/run/: +page.svelte
frontend/src/routes/run/vigiles/: +page.svelte
packaging/: cloudflare-worker.js  wrangler.toml
