[project]
name = "auspexai-researcher-dashboard"
dynamic = ["version"]
description = "Tenant-scoped, locally-run dashboard for researchers shipping experiments on the AuspexAI volunteer compute network"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AuspexAI Maintainers", email = "contact@auspexai.network" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "click>=8.1",
    # The researcher's Ed25519 key, RFC 9421 request signing, and schema models
    # all come from the tenant SDK (researcher_dashboard_design.md §5/§7.1). Now
    # a hard runtime dependency as of R-D2: the backend signs every coordinator
    # request with the SDK's Rfc9421Auth. The SDK's RFC 9421 request signer
    # shipped in R-D1(a). PyPI publish for both packages is still deferred, so
    # in practice install the SDK alongside this package from the sibling repo
    # (e.g. `pip install -e ../tenant-sdk -e .`); once published this resolves
    # normally.
    "auspexai-tenant",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff==0.15.15",
]

[project.scripts]
auspexai-dashboard = "auspexai_researcher_dashboard.cli:main"

[project.urls]
Homepage = "https://auspexai.network"
Repository = "https://github.com/auspexai/researcher-dashboard"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version derived from git tags (hatch-vcs), stamped at build. The git root is
# one level up (this pyproject lives in backend/, .git is in the repo root), so
# point setuptools_scm at it. See version_provenance.md (V-M1).
[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

# Default selection includes EVERYTHING under the package dir — including the
# frontend-built static/ bundle when present at build time (hatchling does not
# consult .gitignore for wheel selection when `packages` is set). The release
# workflow builds the SPA into static/ before `uv build`, so release wheels
# ship the UI; a bare-checkout build ships only static/.gitkeep and the app
# serves its placeholder.
[tool.hatch.build.targets.wheel]
packages = ["src/auspexai_researcher_dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
